force-app/main/default/objects/Cultivation_Tax_Receipt__c/Cultivation_Tax_Receipt__c.object-meta.xml
<CustomObject>
    <description>Used in the generation of Cultivation Tax Receipt as proof of remittance by supplier.</description>
    <label>Cultivation Tax Receipt</label>
    <nameField>
        <displayFormat>CTR-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Cultivation Tax Receipt</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cultivation Tax Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>