force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>