force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Cultivation_Tax_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Tax_Acceptance_Date__c</fullName>
    <inlineHelpText>Date Distributor Accepted Cultivation Tax Remittance to Issue Receipt</inlineHelpText>
    <label>Cultivation Tax Acceptance Date</label>
    <type>DateTime</type>
</CustomField>