force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Cultivation_Tax_Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Tax_Payment_Form__c</fullName>
    <label>Cultivation Tax Payment Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>