force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Cultivation_Tax_Reconciliation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Tax_Reconciliation_Notes__c</fullName>
    <label>Cultivation Tax Reconciliation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>