force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <formula>CASE(MONTH(  DATEVALUE(  Cultivation_Tax_Acceptance_Date__c  )), 
1, &apos;Q1&apos;, 
2, &apos;Q1&apos;, 
3, &apos;Q1&apos;, 
4, &apos;Q2&apos;, 
5, &apos;Q2&apos;, 
6, &apos;Q2&apos;, 
7, &apos;Q3&apos;, 
8, &apos;Q3&apos;, 
9, &apos;Q3&apos;, 
10, &apos;Q4&apos;, 
11, &apos;Q4&apos;, 
12, &apos;Q4&apos;, 
null)+ 
TEXT(YEAR( DATEVALUE(Cultivation_Tax_Acceptance_Date__c   )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Period</label>
    <type>Text</type>
</CustomField>