force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts (Ownership)</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts3</relationshipName>
    <type>Lookup</type>
</CustomField>