force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <formula>Transfer_Shipping_Manifest__r.Purchase_Order__r.Name</formula>
    <label>Purchase Order</label>
    <type>Text</type>
</CustomField>