force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Receipt_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Create_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Receipt Create Date</label>
    <type>DateTime</type>
</CustomField>