force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Receiver_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Receiver_City_State_Zip__c</fullName>
    <formula>Text(Receiver_License__r.License_City__c)  + &quot;, &quot; +
Text(Receiver_License__r.License_State__c) + &quot;, &quot; +
Receiver_License__r.License_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver City, State, Zip</label>
    <type>Text</type>
</CustomField>