force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Receiver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts (Receiver Contact)</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts2</relationshipName>
    <type>Lookup</type>
</CustomField>