force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Receiver_DBA__c.field-meta.xml
<CustomField>
    <fullName>Receiver_DBA__c</fullName>
    <formula>Receiver_Name__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver DBA</label>
    <type>Text</type>
</CustomField>