force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Receiver_License_Class__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License_Class__c</fullName>
    <formula>TEXT(Receiver_License__r.License_Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver License Class</label>
    <type>Text</type>
</CustomField>