force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts (Receiver Name)</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>