force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <formula>Transfer_Shipping_Manifest__r.Planned_Transfer_Date__c</formula>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>