force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shipping Manifest</label>
    <referenceTo>Shipping_Manifest__c</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>