force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>