force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>