force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Supplier_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Type__c</fullName>
    <formula>TEXT(Supplier_License__r.License_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier License Type</label>
    <type>Text</type>
</CustomField>