force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>