force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Tax_Remittance_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Tax_Remittance_Instructions__c</fullName>
    <label>Tax Remittance Instructions</label>
    <type>TextArea</type>
</CustomField>