force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Total_Cultivation_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Cultivation_Tax_Amount__c</fullName>
    <label>Total Cultivation Tax Amount</label>
    <summarizedField>Cultivation_Tax_Receipt_Line__c.Line_Total_CT_Amount__c</summarizedField>
    <summaryForeignKey>Cultivation_Tax_Receipt_Line__c.Cultivation_Tax_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>