force-app/main/default/objects/Cultivation_Tax_Receipt__c/fields/Transfer_Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Shipping_Manifest__c</fullName>
    <label>Transfer Shipping Manifest</label>
    <referenceTo>Transfer_Shipping_Manifest__c</referenceTo>
    <relationshipLabel>Cultivation Tax Receipts</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>